fix: :bug: fixes slider jumping issue

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,31 @@
 #root {
     height: 100vh;
     height: calc(var(--vh) * 100);
-    overflow: hidden;
+}
+
+/* Hiding the scrollbar */
+html {
+    overflow: scroll;
+    scrollbar-width: none !important;
+}
+
+*::-webkit-scrollbar {
+    display: none;
+}
+
+* {
+    -ms-overflow-style: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+    display: none;
+    scrollbar-width: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+.hide-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 body {
